# ollama_open_router

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  config.docker.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
docs/: CLAUDE_CODE_GUIDE.md  OPNECODE_GUIDE.md
docs/plans/: 2026-03-26-ollama-router-design.md  2026-03-26-ollama-router-implementation-plan.md  2026-03-30-admin-panel-plan.md
ollama_router/: __main__.py  config.py  handler.py  metrics.py  proxy.py  request_context.py  request_history.py  retry.py  router.py  state.py
ollama_router/admin/: auth.py  logs.py  middleware.py  routes.py  views.py
ollama_router/anthropic/: __init__.py  converter.py  model_map.py  models.py  routes.py  stream.py
scripts/: docker-entrypoint.sh  healthcheck.py  run.sh
templates/admin/: _history_table.html  _keys_table.html  _logs_stream.html  _logs_table.html  _stats_panel.html  base.html  dashboard.html  history.html  keys.html  login.html  logs.html
tests/: test_anthropic_converter.py  test_anthropic_models.py  test_anthropic_routes.py  test_anthropic_stream.py  test_config.py  test_handler.py  test_integration.py  test_main.py  test_proxy.py  test_request_context.py  test_request_history.py  test_retry.py  test_router.py  test_selector.py  test_state.py
tests/admin/: __init__.py  test_log_routes.py  test_logs.py
